[package]
name = "dearbitrary_derive"
version = "1.0.0"
authors = [
    "Otter-Sec",
    "Aleksandre Khokhiashvili <alkhok18@freeuni.edu.ge>",
    "qdrs <qdrs@proton.me>"
]
categories = ["development-tools::testing"]
edition = "2021"
keywords = ["dearbitrary", "testing", "derive", "macro"]
readme = "README.md"
description = "Derives dearbitrary traits"
license = "MIT"
repository = "https://github.com/otter-sec/dearbitrary/"
documentation = "https://docs.rs/dearbitrary_derive/"
rust-version = "1.70.0"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc_macro = true
