[package]
name = "derive_dearbitrary"
version = "1.2.0" # Make sure it matches the version of the dearbitrary crate itself.
authors = [
    "The Rust-Fuzz Project Developers",
    "Nick Fitzgerald <fitzgen@gmail.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
    "Andre Bogus <bogusandre@gmail.com>",
    "Corey Farwell <coreyf@rwell.org>",
]
categories = ["development-tools::testing"]
edition = "2021"
keywords = ["dearbitrary", "testing", "derive", "macro"]
readme = "README.md"
description = "Derives dearbitrary traits"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-fuzz/dearbitrary"
documentation = "https://docs.rs/dearbitrary/"
rust-version = "1.63.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ['derive'] }

[lib]
proc_macro = true
